# mantid

Framework/: CMakeLists.txt
Framework/CudaAlgorithms/: CMakeLists.txt
Framework/CudaAlgorithms/inc/MantidCudaAlgorithms/: CudaAlgorithmContext.h  CudaGuard.h  CudaMathExtensions.h  CudaReduce.h  CudaVector.h  CurandGuard.h
Framework/CudaAlgorithms/inc/MantidCudaAlgorithms/Algorithms/: CudaMonteCarloAbsorption.h
Framework/CudaAlgorithms/inc/MantidCudaAlgorithms/Algorithms/SampleCorrections/: CudaBeamProfileFactory.h  CudaCSGObjectFactory.h  CudaDetectorBin.h  CudaDetectorBinProvider.h  CudaDetectorBinProviderSetup.h  CudaMCAbsorptionParameters.h  CudaMCAbsorptionSetup.h  CudaMCAbsorptionStrategy.h  CudaMCGeometryBuffer.h  CudaRectangularBeamProfile.h  ICudaBeamProfile.h
Framework/CudaAlgorithms/inc/MantidCudaAlgorithms/Geometry/: CudaBoundingBox.h  CudaCSGObject.h  CudaCone.h  CudaCylinder.h  CudaLine.h  CudaLineIntersectVisit.h  CudaPlane.h  CudaQuadratic.h  CudaRandomPoint.h  CudaRules.h  CudaShapeInfo.h  CudaSphere.h  CudaSurface.h  CudaTrack.h
Framework/CudaAlgorithms/inc/MantidCudaAlgorithms/Kernel/: CudaMaterial.h  CudaMersenneTwister.h  CudaV3D.h
Framework/CudaAlgorithms/src/: CudaAlgorithmContext.cu  CudaMathExtensions.cu  CudaVector.cu
Framework/CudaAlgorithms/src/Algorithms/: CudaMonteCarloAbsorption.cpp
Framework/CudaAlgorithms/src/Algorithms/SampleCorrections/: CudaBeamProfileFactory.cu  CudaCSGObjectFactory.cu  CudaDetectorBinProvider.cu  CudaDetectorBinProviderSetup.cpp  CudaMCAbsorptionSetup.cpp  CudaMCAbsorptionStrategy.cu  CudaMCGeometryBuffer.cu  CudaRectangularBeamProfile.cu
Framework/CudaAlgorithms/src/Geometry/: CudaBoundingBox.cu  CudaCSGObject.cu  CudaCone.cu  CudaCylinder.cu  CudaLine.cu  CudaLineIntersectVisit.cu  CudaPlane.cu  CudaQuadratic.cu  CudaRandomPoint.cu  CudaRuleItems.cu  CudaShapeInfo.cu  CudaSphere.cu  CudaTrack.cu
Framework/CudaAlgorithms/src/Kernel/: CudaMaterial.cu  CudaMersenneTwister.cu  CudaV3D.cu
buildconfig/CMake/: GNUSetup.cmake
docs/source/algorithms/: CudaMonteCarloAbsorption-v1.rst
